--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -45,8 +45,8 @@ body {
         bottom: 0;
         top: 0;
         position: absolute;
-        background: linear-gradient(107.54deg, rgba(23, 26, 28, 0.72) 0%, #5E5E57 100%);
-        opacity: 0.15;
+        background: radial-gradient(45.97% 54.43% at 50% 45.57%, rgba(23, 26, 28, 0) 50.28%, rgba(23, 26, 28, 0.00225974) 50.29%, rgba(4, 5, 5, 0.820343) 80.72%, rgba(5, 5, 6, 0.792703) 60.00%, #000000 87.89%);
+        opacity: 0.4;
     }
     &__wrapper {
         z-index: 1;
